@@ -106,6 +106,7 @@ template<typename O> send(string serviceName, O options)
 - [ ] Could update automatically installed plugins with the use
   of Rainbrurpg's Extension Repository (a foswiki web)
 **** Implement dependency graph in C++
+     CLOCK: [2013-10-07 lun. 18:22]
      CLOCK: [2013-10-07 lun. 10:09]--[2013-10-07 lun. 10:56] =>  0:47
      CLOCK: [2013-10-06 dim. 22:19]--[2013-10-06 dim. 23:25] =>  1:06
      CLOCK: [2013-10-06 dim. 19:14]--[2013-10-06 dim. 19:50] =>  0:36
@@ -116,6 +117,7 @@ template<typename O> send(string serviceName, O options)
       - [ ] Extension name must be a WikiWord
 	http://foswiki.org/System/WikiWord
 	How to unit test this ? Maybe a splitted grammar if possible ?
+	Mauby using multiple grammars see http://stackoverflow.com/a/9732918
       - [ ] OP are =, <, <=, >, >=
       - [ ] version = x*, x.y* or x.y.z* or x.y.z-r*
 	Where x,y,z,r are one or more digit
