@@ -1,35 +1,61 @@
-#include <boost/config/warning_disable.hpp>
-#include <boost/spirit/include/qi.hpp>
-
-#include <iostream>
 #include <string>
-#include <vector>
+#include <boost/spirit/include/qi.hpp>
+#include <boost/fusion/include/adapt_struct.hpp>
 
-namespace client
-{
-    namespace qi = boost::spirit::qi;
-    namespace ascii = boost::spirit::ascii;
+struct Date {
+    int year, month, day;
+};
+struct Time {
+    int hour, minute, second;
+};
 
-    ///////////////////////////////////////////////////////////////////////////
-    //  Our number list parser
-    ///////////////////////////////////////////////////////////////////////////
-    //[tutorial_numlist1
-    template <typename Iterator>
-    bool parse_numbers(Iterator first, Iterator last)
-    {
-        using qi::double_;
-        using qi::phrase_parse;
-        using ascii::space;
+BOOST_FUSION_ADAPT_STRUCT(
+    Date,
+    (int, year)
+    (int, month)
+    (int, day)
+)
 
-        bool r = phrase_parse(
-            first,                          /*< start iterator >*/
-            last,                           /*< end iterator >*/
-            double_ >> *(',' >> double_),   /*< the parser >*/
-            space                           /*< the skip-parser >*/
-        );
-        if (first != last) // fail if we did not get a full match
-            return false;
-        return r;
-    }
-    //]
-}
+BOOST_FUSION_ADAPT_STRUCT(
+    Time,
+    (int, hour)
+    (int, minute)
+    (int, second)
+)
+
+namespace qi = boost::spirit::qi;
+namespace ascii = boost::spirit::ascii;
+typedef std::string::const_iterator Iterator;
+
+class DateParser:
+    public qi::grammar < Iterator, Date() > {
+        qi::rule < Iterator, Date() > main;
+    public:
+        DateParser(): base_type(main) {
+            main %= qi::int_ >> '-' >> // Year
+                    qi::int_ >> '-' >> // Month
+                    qi::int_;          // Day
+        }
+};
+
+class TimeParser:
+    public qi::grammar < Iterator, Time() > {
+        qi::rule < Iterator, Time() > main;
+    public:
+        TimeParser(): base_type(main) {
+            main %= qi::int_ >> ':' >> // Hour
+                    qi::int_ >> ':' >> // Minute
+                    qi::int_;          // Second
+        }
+};
+
+class DateTimeParser:
+    public qi::grammar < Iterator, boost::variant<Date, Time>() > {
+        qi::rule < Iterator, boost::variant<Date, Time>()> main;
+    public:
+        DateTimeParser(): base_type(main) {
+            main %= date_parser | time_parser;
+        }
+        DateParser date_parser;
+        TimeParser time_parser;
+};
